--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,17 @@ uuid = "df8efd69-f2b9-468d-a38a-0046f1138390"
 authors = ["Thomas Poulsen"]
 version = "0.1.0"
 
+[deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
+
 [compat]
-julia = "1.6"
+julia = "1.6,1.7,1.8"
+DataFrames = "~1.3"
+HTTP = "~1.4"
+URIs = "~1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
