--- a/Project.toml
+++ b/Project.toml
@@ -10,10 +10,10 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 
 [compat]
-julia = "1.6,1.7,1.8"
 DataFrames = "~1.3"
-HTTP = "~1.4"
+HTTP = "~1.4, 1"
 URIs = "~1.4"
+julia = "1.6,1.7,1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
